# rs_transcript_worker

./: .gitlab-ci.yml  Cargo.toml  Dockerfile
examples/: speechmatics.json
ressources/: custom_vocabulary.json
src/: main.rs
src/authot/: mod.rs  start_recognition_information.rs  websocket_response.rs
src/format/: mod.rs
src/misc/: mod.rs
src/newsbridge/: launch_mission.rs  mod.rs
src/providers/: mod.rs
src/providers/speechmatics/: mod.rs  start_recognition_information.rs  websocket_response.rs
